Heap snapshot API
JerryScript-DCO-1.0-Signed-off-by: Collin Fair cfair@fitbit.com

--- a/jerry-core/CMakeLists.txt
+++ b/jerry-core/CMakeLists.txt
@@ -20,25 +20,27 @@ project (${JERRY_CORE_NAME} C)
 set(ENABLE_ALL_IN_ONE          OFF     CACHE BOOL   "Enable all-in-one build?")
 
 # Optional features
-set(FEATURE_CPOINTER_32_BIT    OFF     CACHE BOOL   "Enable 32 bit compressed pointers?")
-set(FEATURE_DEBUGGER           OFF     CACHE BOOL   "Enable JerryScript debugger?")
-set(FEATURE_ERROR_MESSAGES     OFF     CACHE BOOL   "Enable error messages?")
-set(FEATURE_EXTERNAL_CONTEXT   OFF     CACHE BOOL   "Enable external context?")
-set(FEATURE_JS_PARSER          ON      CACHE BOOL   "Enable js-parser?")
-set(FEATURE_LINE_INFO          OFF     CACHE BOOL   "Enable line info?")
-set(FEATURE_LOGGING            OFF     CACHE BOOL   "Enable logging?")
-set(FEATURE_MEM_STATS          OFF     CACHE BOOL   "Enable memory statistics?")
-set(FEATURE_MEM_STRESS_TEST    OFF     CACHE BOOL   "Enable mem-stress test?")
-set(FEATURE_PARSER_DUMP        OFF     CACHE BOOL   "Enable parser byte-code dumps?")
-set(FEATURE_PROFILE            "es5.1" CACHE STRING "Use default or other profile?")
-set(FEATURE_REGEXP_STRICT_MODE OFF     CACHE BOOL   "Enable regexp strict mode?")
-set(FEATURE_REGEXP_DUMP        OFF     CACHE BOOL   "Enable regexp byte-code dumps?")
-set(FEATURE_SNAPSHOT_EXEC      OFF     CACHE BOOL   "Enable executing snapshot files?")
-set(FEATURE_SNAPSHOT_SAVE      OFF     CACHE BOOL   "Enable saving snapshot files?")
-set(FEATURE_SYSTEM_ALLOCATOR   OFF     CACHE BOOL   "Enable system allocator?")
-set(FEATURE_VALGRIND           OFF     CACHE BOOL   "Enable Valgrind support?")
-set(FEATURE_VM_EXEC_STOP       OFF     CACHE BOOL   "Enable VM execution stopping?")
-set(MEM_HEAP_SIZE_KB           "512"   CACHE STRING "Size of memory heap, in kilobytes")
+set(FEATURE_CPOINTER_32_BIT            OFF     CACHE BOOL   "Enable 32 bit compressed pointers?")
+set(FEATURE_DEBUGGER                   OFF     CACHE BOOL   "Enable JerryScript debugger?")
+set(FEATURE_ERROR_MESSAGES             OFF     CACHE BOOL   "Enable error messages?")
+set(FEATURE_EXTERNAL_CONTEXT           OFF     CACHE BOOL   "Enable external context?")
+set(FEATURE_JS_PARSER                  ON      CACHE BOOL   "Enable js-parser?")
+set(FEATURE_LINE_INFO                  OFF     CACHE BOOL   "Enable line info?")
+set(FEATURE_LOGGING                    OFF     CACHE BOOL   "Enable logging?")
+set(FEATURE_MEM_STATS                  OFF     CACHE BOOL   "Enable memory statistics?")
+set(FEATURE_MEM_STRESS_TEST            OFF     CACHE BOOL   "Enable mem-stress test?")
+set(FEATURE_MEM_TRACK_ALLOCATION_SIZES OFF     CACHE BOOL   "Enable memory allocation size tracking?")
+set(FEATURE_HEAP_SNAPSHOT              OFF     CACHE BOOL   "Enable heap snapshot API?")
+set(FEATURE_PARSER_DUMP                OFF     CACHE BOOL   "Enable parser byte-code dumps?")
+set(FEATURE_PROFILE                    "es5.1" CACHE STRING "Use default or other profile?")
+set(FEATURE_REGEXP_STRICT_MODE         OFF     CACHE BOOL   "Enable regexp strict mode?")
+set(FEATURE_REGEXP_DUMP                OFF     CACHE BOOL   "Enable regexp byte-code dumps?")
+set(FEATURE_SNAPSHOT_EXEC              OFF     CACHE BOOL   "Enable executing snapshot files?")
+set(FEATURE_SNAPSHOT_SAVE              OFF     CACHE BOOL   "Enable saving snapshot files?")
+set(FEATURE_SYSTEM_ALLOCATOR           OFF     CACHE BOOL   "Enable system allocator?")
+set(FEATURE_VALGRIND                   OFF     CACHE BOOL   "Enable Valgrind support?")
+set(FEATURE_VM_EXEC_STOP               OFF     CACHE BOOL   "Enable VM execution stopping?")
+set(MEM_HEAP_SIZE_KB                   "512"   CACHE STRING "Size of memory heap, in kilobytes")
 
 # Option overrides
 if(USING_MSVC)
@@ -74,26 +76,28 @@ if(FEATURE_MEM_STATS OR FEATURE_PARSER_DUMP OR FEATURE_REGEXP_DUMP)
 endif()
 
 # Status messages
-message(STATUS "ENABLE_ALL_IN_ONE           " ${ENABLE_ALL_IN_ONE} ${ENABLE_ALL_IN_ONE_MESSAGE})
-message(STATUS "FEATURE_CPOINTER_32_BIT     " ${FEATURE_CPOINTER_32_BIT} ${FEATURE_CPOINTER_32_BIT_MESSAGE})
-message(STATUS "FEATURE_DEBUGGER            " ${FEATURE_DEBUGGER})
-message(STATUS "FEATURE_ERROR_MESSAGES      " ${FEATURE_ERROR_MESSAGES})
-message(STATUS "FEATURE_EXTERNAL_CONTEXT    " ${FEATURE_EXTERNAL_CONTEXT})
-message(STATUS "FEATURE_JS_PARSER           " ${FEATURE_JS_PARSER})
-message(STATUS "FEATURE_LINE_INFO           " ${FEATURE_LINE_INFO})
-message(STATUS "FEATURE_LOGGING             " ${FEATURE_LOGGING} ${FEATURE_LOGGING_MESSAGE})
-message(STATUS "FEATURE_MEM_STATS           " ${FEATURE_MEM_STATS})
-message(STATUS "FEATURE_MEM_STRESS_TEST     " ${FEATURE_MEM_STRESS_TEST})
-message(STATUS "FEATURE_PARSER_DUMP         " ${FEATURE_PARSER_DUMP} ${FEATURE_PARSER_DUMP_MESSAGE})
-message(STATUS "FEATURE_PROFILE             " ${FEATURE_PROFILE})
-message(STATUS "FEATURE_REGEXP_STRICT_MODE  " ${FEATURE_REGEXP_STRICT_MODE})
-message(STATUS "FEATURE_REGEXP_DUMP         " ${FEATURE_REGEXP_DUMP})
-message(STATUS "FEATURE_SNAPSHOT_EXEC       " ${FEATURE_SNAPSHOT_EXEC} ${FEATURE_SNAPSHOT_EXEC_MESSAGE})
-message(STATUS "FEATURE_SNAPSHOT_SAVE       " ${FEATURE_SNAPSHOT_SAVE} ${FEATURE_SNAPSHOT_SAVE_MESSAGE})
-message(STATUS "FEATURE_SYSTEM_ALLOCATOR    " ${FEATURE_SYSTEM_ALLOCATOR})
-message(STATUS "FEATURE_VALGRIND            " ${FEATURE_VALGRIND})
-message(STATUS "FEATURE_VM_EXEC_STOP        " ${FEATURE_VM_EXEC_STOP})
-message(STATUS "MEM_HEAP_SIZE_KB            " ${MEM_HEAP_SIZE_KB})
+message(STATUS "ENABLE_ALL_IN_ONE                  " ${ENABLE_ALL_IN_ONE} ${ENABLE_ALL_IN_ONE_MESSAGE})
+message(STATUS "FEATURE_CPOINTER_32_BIT            " ${FEATURE_CPOINTER_32_BIT} ${FEATURE_CPOINTER_32_BIT_MESSAGE})
+message(STATUS "FEATURE_DEBUGGER                   " ${FEATURE_DEBUGGER})
+message(STATUS "FEATURE_ERROR_MESSAGES             " ${FEATURE_ERROR_MESSAGES})
+message(STATUS "FEATURE_EXTERNAL_CONTEXT           " ${FEATURE_EXTERNAL_CONTEXT})
+message(STATUS "FEATURE_JS_PARSER                  " ${FEATURE_JS_PARSER})
+message(STATUS "FEATURE_LINE_INFO                  " ${FEATURE_LINE_INFO})
+message(STATUS "FEATURE_LOGGING                    " ${FEATURE_LOGGING} ${FEATURE_LOGGING_MESSAGE})
+message(STATUS "FEATURE_MEM_STATS                  " ${FEATURE_MEM_STATS})
+message(STATUS "FEATURE_MEM_STRESS_TEST            " ${FEATURE_MEM_STRESS_TEST})
+message(STATUS "FEATURE_MEM_TRACK_ALLOCATION_SIZES " ${FEATURE_MEM_TRACK_ALLOCATION_SIZES})
+message(STATUS "FEATURE_HEAP_SNAPSHOT              " ${FEATURE_HEAP_SNAPSHOT})
+message(STATUS "FEATURE_PARSER_DUMP                " ${FEATURE_PARSER_DUMP} ${FEATURE_PARSER_DUMP_MESSAGE})
+message(STATUS "FEATURE_PROFILE                    " ${FEATURE_PROFILE})
+message(STATUS "FEATURE_REGEXP_STRICT_MODE         " ${FEATURE_REGEXP_STRICT_MODE})
+message(STATUS "FEATURE_REGEXP_DUMP                " ${FEATURE_REGEXP_DUMP})
+message(STATUS "FEATURE_SNAPSHOT_EXEC              " ${FEATURE_SNAPSHOT_EXEC} ${FEATURE_SNAPSHOT_EXEC_MESSAGE})
+message(STATUS "FEATURE_SNAPSHOT_SAVE              " ${FEATURE_SNAPSHOT_SAVE} ${FEATURE_SNAPSHOT_SAVE_MESSAGE})
+message(STATUS "FEATURE_SYSTEM_ALLOCATOR           " ${FEATURE_SYSTEM_ALLOCATOR})
+message(STATUS "FEATURE_VALGRIND                   " ${FEATURE_VALGRIND})
+message(STATUS "FEATURE_VM_EXEC_STOP               " ${FEATURE_VM_EXEC_STOP})
+message(STATUS "MEM_HEAP_SIZE_KB                   " ${MEM_HEAP_SIZE_KB})
 
 # Include directories
 set(INCLUDE_CORE_PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include")
@@ -206,6 +210,16 @@ endif()
 # Memory statistics
 if(FEATURE_MEM_STATS)
   set(DEFINES_JERRY ${DEFINES_JERRY} JMEM_STATS)
+endif()
+
+# Memory allocation tracking
+if(FEATURE_MEM_TRACK_ALLOCATION_SIZES)
+  set(DEFINES_JERRY ${DEFINES_JERRY} JMEM_TRACK_ALLOCATION_SIZES)
+endif()
+
+# Heap snapshot
+if(FEATURE_HEAP_SNAPSHOT)
+  set(DEFINES_JERRY ${DEFINES_JERRY} JERRY_ENABLE_HEAP_SNAPSHOT)
 endif()
 
 # Enable debugger
