Support Bluetooth communcation JerryScript debugger
Documentation can be found in 07.DEBUGGER.md

JerryScript-DCO-1.0-Signed-off-by: Bence Gabor Kis kisbg@inf.u-szeged.hu

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,10 +14,12 @@ matrix:
     - name: "Checks"
       env:
         - OPTS="--check-signed-off=travis --check-cppcheck --check-doxygen --check-vera --check-license --check-magic-strings --check-pylint"
-      install: pip install --user pylint==1.6.5
+      install:
+        - pip install --user pylint==1.6.5
+        - pip install --user pybluez
       addons:
         apt:
-          packages: [doxygen, cppcheck, vera++]
+          packages: [doxygen, cppcheck, vera++, libbluetooth-dev, python-dev]
 
     - name: "Linux/x86-64 Build & Correctness Tests"
       env:
