--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -67,6 +67,7 @@ LIT_MAGIC_STRING_CEIL = "ceil"
 LIT_MAGIC_STRING_EVAL = "eval"
 LIT_MAGIC_STRING_EXEC = "exec"
 LIT_MAGIC_STRING_FILL = "fill"
+LIT_MAGIC_STRING_FIND = "find"
 LIT_MAGIC_STRING_FROM = "from"
 LIT_MAGIC_STRING_JOIN = "join"
 LIT_MAGIC_STRING_KEYS = "keys"
