Implement Iterator interface and Array iterators
JerryScript-DCO-1.0-Signed-off-by: Robert Fancsik frobert@inf.u-szeged.hu

--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -66,6 +66,7 @@ LIT_MAGIC_STRING_ATAN = "atan"
 LIT_MAGIC_STRING_BIND = "bind"
 LIT_MAGIC_STRING_CALL = "call"
 LIT_MAGIC_STRING_CEIL = "ceil"
+LIT_MAGIC_STRING_DONE = "done"
 LIT_MAGIC_STRING_EVAL = "eval"
 LIT_MAGIC_STRING_EXEC = "exec"
 LIT_MAGIC_STRING_FILL = "fill"
@@ -75,6 +76,7 @@ LIT_MAGIC_STRING_JOIN = "join"
 LIT_MAGIC_STRING_KEYS = "keys"
 LIT_MAGIC_STRING_NAME = "name"
 LIT_MAGIC_STRING_NULL = "null"
+LIT_MAGIC_STRING_NEXT = "next"
 LIT_MAGIC_STRING_PUSH = "push"
 LIT_MAGIC_STRING_RACE = "race"
 LIT_MAGIC_STRING_SEAL = "seal"
@@ -140,7 +142,9 @@ LIT_MAGIC_STRING_SPLICE = "splice"
 LIT_MAGIC_STRING_STRING = "string"
 LIT_MAGIC_STRING_SYMBOL = "symbol"
 LIT_MAGIC_STRING_SUBSTR = "substr"
+LIT_MAGIC_STRING_ENTRIES = "entries"
 LIT_MAGIC_STRING_TO_JSON_UL = "toJSON"
+LIT_MAGIC_STRING_VALUES = "values"
 LIT_MAGIC_STRING_BOOLEAN_UL = "Boolean"
 LIT_MAGIC_STRING_PROMISE_UL = "Promise"
 LIT_MAGIC_STRING_SQRT1_2_U = "SQRT1_2"
@@ -255,6 +259,7 @@ LIT_MAGIC_STRING_LOCALE_COMPARE_UL = "localeCompare"
 LIT_MAGIC_STRING_SET_UTC_MINUTES_UL = "setUTCMinutes"
 LIT_MAGIC_STRING_SET_UTC_SECONDS_UL = "setUTCSeconds"
 LIT_MAGIC_STRING_TO_EXPONENTIAL_UL = "toExponential"
+LIT_MAGIC_STRING_ARRAY_ITERATOR_UL = "Array Iterator"
 LIT_MAGIC_STRING_REFERENCE_ERROR_UL = "ReferenceError"
 LIT_MAGIC_STRING_DEFINE_PROPERTY_UL = "defineProperty"
 LIT_MAGIC_STRING_GET_PROTOTYPE_OF_UL = "getPrototypeOf"
