[WIP] Implement Set builtin
JerryScript-DCO-1.0-Signed-off-by: Robert Fancsik frobert@inf.u-szeged.hu

--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -35,8 +35,10 @@ LIT_MAGIC_STRING_OF = "of"
 LIT_MAGIC_STRING_LN2_U = "LN2"
 LIT_MAGIC_STRING_MAP_UL = "Map"
 LIT_MAGIC_STRING_NAN = "NaN"
+LIT_MAGIC_STRING_SET_UL = "Set"
 LIT_MAGIC_STRING_UTC_U = "UTC"
 LIT_MAGIC_STRING_ABS = "abs"
+LIT_MAGIC_STRING_ADD = "add"
 LIT_MAGIC_STRING_ALL = "all"
 LIT_MAGIC_STRING_COS = "cos"
 LIT_MAGIC_STRING_EXP = "exp"
