Implement Object.assign routine
Related part of the standard: ECMA-262 v6, 19.1.2.1

JerryScript-DCO-1.0-Signed-off-by: Robert Fancsik frobert@inf.u-szeged.hu

--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -110,6 +110,7 @@ LIT_MAGIC_STRING_NUMBER_UL = "Number"
 LIT_MAGIC_STRING_OBJECT_UL = "Object"
 LIT_MAGIC_STRING_REGEXP_UL = "RegExp"
 LIT_MAGIC_STRING_STRING_UL = "String"
+LIT_MAGIC_STRING_ASSIGN = "assign"
 LIT_MAGIC_STRING_BUFFER = "buffer"
 LIT_MAGIC_STRING_CALLEE = "callee"
 LIT_MAGIC_STRING_CALLER = "caller"
