Implement handle scope API in jerry-ext
JerryScript-DCO-1.0-Signed-off-by: legendecas legendecas@gmail.com

--- a/jerry-ext/CMakeLists.txt
+++ b/jerry-ext/CMakeLists.txt
@@ -37,6 +37,7 @@ file(GLOB SOURCE_EXT
      arg/*.c
      common/*.c
      debugger/*.c
+     handle-scope/*.c
      handler/*.c
      module/*.c)
 
