Rework ES2015 module system and add missing features.
Co-authored-by: Dániel Bátyai <dbatyai@inf.u-szeged.hu>
JerryScript-DCO-1.0-Signed-off-by: Dániel Bátyai dbatyai@inf.u-szeged.hu
JerryScript-DCO-1.0-Signed-off-by: Daniel Vince vinced@inf.u-szeged.hu

--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -23,6 +23,7 @@
 [LIT_MAGIC_STRINGS]
 
 LIT_MAGIC_STRING__EMPTY = ""
+LIT_MAGIC_STRING_ASTERIX_CHAR = "*"
 LIT_MAGIC_STRING_SPACE_CHAR = " "
 LIT_MAGIC_STRING_RIGHT_PAREN = ")"
 LIT_MAGIC_STRING_COMMA_CHAR = ","
@@ -152,6 +153,7 @@ LIT_MAGIC_STRING_SYMBOL_LEFT_PAREN_UL = "Symbol("
 LIT_MAGIC_STRING_SYMBOL_DOT_UL = "Symbol."
 LIT_MAGIC_STRING_BOOLEAN = "boolean"
 LIT_MAGIC_STRING_COMPILE = "compile"
+LIT_MAGIC_STRING_DEFAULT = "default"
 LIT_MAGIC_STRING_FOR_EACH_UL = "forEach"
 LIT_MAGIC_STRING_GET_DATE_UL = "getDate"
 LIT_MAGIC_STRING_GET_INT8_UL = "getInt8"
