Implement DataView builtin
New API functions:
 - jerry_create_dataview
 - jerry_value_is_dataview
 - jerry_get_dataview_buffer

JerryScript-DCO-1.0-Signed-off-by: Robert Fancsik frobert@inf.u-szeged.hu

--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -154,6 +154,7 @@ LIT_MAGIC_STRING_BOOLEAN = "boolean"
 LIT_MAGIC_STRING_COMPILE = "compile"
 LIT_MAGIC_STRING_FOR_EACH_UL = "forEach"
 LIT_MAGIC_STRING_GET_DATE_UL = "getDate"
+LIT_MAGIC_STRING_GET_INT8_UL = "getInt8"
 LIT_MAGIC_STRING_GET_TIME_UL = "getTime"
 LIT_MAGIC_STRING_GET_YEAR_UL = "getYear"
 LIT_MAGIC_STRING_INDEX_OF_UL = "indexOf"
@@ -164,24 +165,32 @@ LIT_MAGIC_STRING_RESOLVE = "resolve"
 LIT_MAGIC_STRING_REVERSE = "reverse"
 LIT_MAGIC_STRING_SET_DATE_UL = "setDate"
 LIT_MAGIC_STRING_SET_TIME_UL = "setTime"
+LIT_MAGIC_STRING_SET_INT8_UL = "setInt8"
 LIT_MAGIC_STRING_SET_YEAR_UL = "setYear"
 LIT_MAGIC_STRING_SPECIES = "species"
 LIT_MAGIC_STRING_TO_FIXED_UL = "toFixed"
 LIT_MAGIC_STRING_UNSHIFT = "unshift"
 LIT_MAGIC_STRING_VALUE_OF_UL = "valueOf"
+LIT_MAGIC_STRING_DATAVIEW_UL = "DataView"
 LIT_MAGIC_STRING_FUNCTION_UL = "Function"
 LIT_MAGIC_STRING_INFINITY_UL = "Infinity"
 LIT_MAGIC_STRING_URI_ERROR_UL = "URIError"
 LIT_MAGIC_STRING_FUNCTION = "function"
 LIT_MAGIC_STRING_GET_HOURS_UL = "getHours"
+LIT_MAGIC_STRING_GET_INT16_UL = "getInt16"
+LIT_MAGIC_STRING_GET_INT32_UL = "getInt32"
 LIT_MAGIC_STRING_GET_MONTH_UL = "getMonth"
+LIT_MAGIC_STRING_GET_UINT8_UL = "getUint8"
 LIT_MAGIC_STRING_IS_FINITE = "isFinite"
 LIT_MAGIC_STRING_IS_FROZEN_UL = "isFrozen"
 LIT_MAGIC_STRING_IS_SEALED_UL = "isSealed"
 LIT_MAGIC_STRING_ITERATOR = "iterator"
 LIT_MAGIC_STRING_PARSE_INT = "parseInt"
 LIT_MAGIC_STRING_SET_HOURS_UL = "setHours"
+LIT_MAGIC_STRING_SET_INT16_UL = "setInt16"
+LIT_MAGIC_STRING_SET_INT32_UL = "setInt32"
 LIT_MAGIC_STRING_SET_MONTH_UL = "setMonth"
+LIT_MAGIC_STRING_SET_UINT8_UL = "setUint8"
 LIT_MAGIC_STRING_SUBARRAY = "subarray"
 LIT_MAGIC_STRING_TO_STRING_UL = "toString"
 LIT_MAGIC_STRING_UNESCAPE = "unescape"
@@ -198,10 +207,14 @@ LIT_MAGIC_STRING_ARGUMENTS = "arguments"
 LIT_MAGIC_STRING_DECODE_URI = "decodeURI"
 LIT_MAGIC_STRING_ENCODE_URI = "encodeURI"
 LIT_MAGIC_STRING_GET_UTC_DAY_UL = "getUTCDay"
+LIT_MAGIC_STRING_GET_UINT16_UL = "getUint16"
+LIT_MAGIC_STRING_GET_UINT32_UL = "getUint32"
 LIT_MAGIC_STRING_LASTINDEX_UL = "lastIndex"
 LIT_MAGIC_STRING_MULTILINE = "multiline"
 LIT_MAGIC_STRING_PROTOTYPE = "prototype"
 LIT_MAGIC_STRING_STRINGIFY = "stringify"
+LIT_MAGIC_STRING_SET_UINT16_UL = "setUint16"
+LIT_MAGIC_STRING_SET_UINT32_UL = "setUint32"
 LIT_MAGIC_STRING_SUBSTRING = "substring"
 LIT_MAGIC_STRING_UNDEFINED = "undefined"
 LIT_MAGIC_STRING_INT16_ARRAY_UL = "Int16Array"
@@ -213,11 +226,15 @@ LIT_MAGIC_STRING_BYTE_LENGTH_UL = "byteLength"
 LIT_MAGIC_STRING_BYTE_OFFSET_UL = "byteOffset"
 LIT_MAGIC_STRING_CHAR_CODE_AT_UL = "charCodeAt"
 LIT_MAGIC_STRING_ENUMERABLE = "enumerable"
+LIT_MAGIC_STRING_GET_FLOAT_32_UL = "getFloat32"
+LIT_MAGIC_STRING_GET_FLOAT_64_UL = "getFloat64"
 LIT_MAGIC_STRING_GET_MINUTES_UL = "getMinutes"
 LIT_MAGIC_STRING_GET_SECONDS_UL = "getSeconds"
 LIT_MAGIC_STRING_GET_UTC_DATE_UL = "getUTCDate"
 LIT_MAGIC_STRING_IGNORECASE_UL = "ignoreCase"
 LIT_MAGIC_STRING_PARSE_FLOAT = "parseFloat"
+LIT_MAGIC_STRING_SET_FLOAT_32_UL = "setFloat32"
+LIT_MAGIC_STRING_SET_FLOAT_64_UL = "setFloat64"
 LIT_MAGIC_STRING_SET_MINUTES_UL = "setMinutes"
 LIT_MAGIC_STRING_SET_SECONDS_UL = "setSeconds"
 LIT_MAGIC_STRING_SET_UTC_DATE_UL = "setUTCDate"
