Implement Array/TypedArray find index
JerryScript-DCO-1.0-Signed-off-by: Daniella Barsony bella@inf.u-szeged.hu

--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -210,6 +210,7 @@ LIT_MAGIC_STRING_UNDEFINED_UL = "Undefined"
 LIT_MAGIC_STRING_ARGUMENTS = "arguments"
 LIT_MAGIC_STRING_DECODE_URI = "decodeURI"
 LIT_MAGIC_STRING_ENCODE_URI = "encodeURI"
+LIT_MAGIC_STRING_FIND_INDEX = "findIndex"
 LIT_MAGIC_STRING_GET_UTC_DAY_UL = "getUTCDay"
 LIT_MAGIC_STRING_GET_UINT16_UL = "getUint16"
 LIT_MAGIC_STRING_GET_UINT32_UL = "getUint32"
