Implement the string iterators (#2873)
JerryScript-DCO-1.0-Signed-off-by: Robert Fancsik frobert@inf.u-szeged.hu

--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -289,6 +289,7 @@ LIT_MAGIC_STRING_HAS_OWN_PROPERTY_UL = "hasOwnProperty"
 LIT_MAGIC_STRING_SET_PROTOTYPE_OF_UL = "setPrototypeOf"
 LIT_MAGIC_STRING_SET_UTC_FULL_YEAR_UL = "setUTCFullYear"
 LIT_MAGIC_STRING_TO_LOCALE_STRING_UL = "toLocaleString"
+LIT_MAGIC_STRING_STRING_ITERATOR_UL = "String Iterator"
 LIT_MAGIC_STRING_GET_MILLISECONDS_UL = "getMilliseconds"
 LIT_MAGIC_STRING_SET_MILLISECONDS_UL = "setMilliseconds"
 LIT_MAGIC_STRING_DEFINE_PROPERTIES_UL = "defineProperties"
