--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -139,6 +139,7 @@ LIT_MAGIC_STRING_OBJECT = "object"
 LIT_MAGIC_STRING_RANDOM = "random"
 LIT_MAGIC_STRING_REDUCE = "reduce"
 LIT_MAGIC_STRING_REJECT = "reject"
+LIT_MAGIC_STRING_REPEAT = "repeat"
 LIT_MAGIC_STRING_SEARCH = "search"
 LIT_MAGIC_STRING_SOURCE = "source"
 LIT_MAGIC_STRING_SPLICE = "splice"
