Implement the Map/Set iterator operations (#2882)
JerryScript-DCO-1.0-Signed-off-by: Robert Fancsik frobert@inf.u-szeged.hu

--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -270,6 +270,8 @@ LIT_MAGIC_STRING_UNSCOPABLES = "unscopables"
 LIT_MAGIC_STRING_FLOAT32_ARRAY_UL = "Float32Array"
 LIT_MAGIC_STRING_FLOAT64_ARRAY_UL = "Float64Array"
 LIT_MAGIC_STRING_INVALID_DATE_UL = "Invalid Date"
+LIT_MAGIC_STRING_SET_ITERATOR_UL = "Set Iterator"
+LIT_MAGIC_STRING_MAP_ITERATOR_UL = "Map Iterator"
 LIT_MAGIC_STRING_CONFIGURABLE = "configurable"
 LIT_MAGIC_STRING_FROM_CHAR_CODE_UL = "fromCharCode"
 LIT_MAGIC_STRING_IS_EXTENSIBLE = "isExtensible"
