Implement String startsWith/includes/endsWith
Co-authored-by: Tamas Keri tkeri@inf.u-szeged.hu
JerryScript-DCO-1.0-Signed-off-by: Daniella Barsony bella@inf.u-szeged.hu

--- a/jerry-core/lit/lit-magic-strings.ini
+++ b/jerry-core/lit/lit-magic-strings.ini
@@ -180,12 +180,14 @@ LIT_MAGIC_STRING_DATAVIEW_UL = "DataView"
 LIT_MAGIC_STRING_FUNCTION_UL = "Function"
 LIT_MAGIC_STRING_INFINITY_UL = "Infinity"
 LIT_MAGIC_STRING_URI_ERROR_UL = "URIError"
+LIT_MAGIC_STRING_ENDS_WITH = "endsWith"
 LIT_MAGIC_STRING_FUNCTION = "function"
 LIT_MAGIC_STRING_GET_HOURS_UL = "getHours"
 LIT_MAGIC_STRING_GET_INT16_UL = "getInt16"
 LIT_MAGIC_STRING_GET_INT32_UL = "getInt32"
 LIT_MAGIC_STRING_GET_MONTH_UL = "getMonth"
 LIT_MAGIC_STRING_GET_UINT8_UL = "getUint8"
+LIT_MAGIC_STRING_INCLUDES = "includes"
 LIT_MAGIC_STRING_IS_FINITE = "isFinite"
 LIT_MAGIC_STRING_IS_FROZEN_UL = "isFrozen"
 LIT_MAGIC_STRING_IS_SEALED_UL = "isSealed"
@@ -244,6 +246,7 @@ LIT_MAGIC_STRING_SET_FLOAT_64_UL = "setFloat64"
 LIT_MAGIC_STRING_SET_MINUTES_UL = "setMinutes"
 LIT_MAGIC_STRING_SET_SECONDS_UL = "setSeconds"
 LIT_MAGIC_STRING_SET_UTC_DATE_UL = "setUTCDate"
+LIT_MAGIC_STRING_STARTS_WITH = "startsWith"
 LIT_MAGIC_STRING_ARRAY_BUFFER_UL = "ArrayBuffer"
 LIT_MAGIC_STRING_SYNTAX_ERROR_UL = "SyntaxError"
 LIT_MAGIC_STRING_UINT16_ARRAY_UL = "Uint16Array"
